Fix consent feature enum.

Bug: 863420
Change-Id: I01e883bda9207614a99b9e2d6c02813d3d56984c
Reviewed-on: https://chromium-review.googlesource.com/1146814
Reviewed-by: Markus Heintz <markusheintz@chromium.org>
Commit-Queue: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577495}
Former-commit-id: a0d639a2216dbcb495fa30951ce98d7fbb5e7b36